# pitalk

./: .gitignore  README.md  audio_api_2.py  gui_test.py  pyproject.toml  utils.py
1/: gui_test.py
audio/: audio_api_test.py  audio_playback.py
prepare/users/: create_users.py
scripts/: create_user.sh  install.sh  install_admin.sh  install_dropbox.sh  install_pitalk.sh  install_portaudio.sh  install_python.sh  install_user.sh
src/pitalk/: dropbox_api.py  management.py  pitalk_base.py  pitalk_mac_tkinter.py  user_api.py
src/pitalk/audio_api/: audio_api_base.py  audio_api_mac.py
src/pitalk/management_api/: create_user.py
src/pitalk/ui_mainloop_api/: ui_mainloop_api_base.py  ui_mainloop_api_tkinter.py
visual/: plot_test.py
